finished encryption/decryption method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Encryption_Module5Assignment_)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Encryption_Module5Assignment_ Encryption.cpp)
+add_executable(Encryption_Module5Assignment_ Encryption.cpp cmake-build-debug/inputdatafile.txt)
